This version updates firebase and shows favorites in the main screen

--- a/index.html
+++ b/index.html
@@ -5,10 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>API Searcher Dictionary II</title>
-    <script defer src="JS/scripts.js"></script>
+    
     <!-- //Código para que mi programa y firebase se entiendan, llamado CDN: Content Delivery Network -->
-    <!-- <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script> 
-    <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-database.js"></script> -->
+    <!-- Librería SDK Firebase Core -->
+    <script 
+    src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js">
+    </script> 
+    <!-- Librería SDK RealTime Database -->
+    <script 
+    src="https://www.gstatic.com/firebasejs/8.2.9/firebase-database.js">
+    </script>
+    <script defer src="JS/scripts.js"></script>
+    <!-- <script src="JS/database.js"></script> -->
 </head>
 <body>
     <div id=mainDiv>
